# elysian-legacy-3

./: .gitignore  Cargo.toml  TODO
examples/: ascii.rs  viuer.rs
src/: closure.rs  lib.rs  util.rs
src/adt/: bounds.rs  builder.rs  expand_alias.rs  into_monad.rs  into_tuple.rs  lift_adt.rs  mod.rs
src/adt/algebra/: compose.rs  inner_bound.rs  intersection.rs  mod.rs  outer_bound.rs  subtraction.rs  tap.rs  union.rs
src/adt/impls/: apply.rs  chain.rs  compose.rs  fmap.rs  foldl.rs  foldr.rs  lift_adt.rs  mappend.rs  mconcat.rs  mempty.rs  mod.rs  pure.rs  return.rs
src/adt/modify/: mod.rs
src/adt/shape/: bounds.rs  mod.rs
src/combinator/: mod.rs  passthrough.rs
src/combinator/boolean/: intersection.rs  mod.rs  subtraction.rs  union.rs
src/combinator/bounding/: inner_bound.rs  mod.rs  outer_bound.rs
src/context/: context_raster.rs  context_raster_image.rs  context_raster_string.rs  mod.rs  pos_dist.rs  pos_dist_color.rs  pos_dist_grad.rs  pos_dist_grad_color.rs
src/domain/: color.rs  distance.rs  domains.rs  evaluate.rs  gradient.rs  identity.rs  mod.rs  null.rs  position.rs  split.rs  subtree.rs
src/evaluator/: ascii.rs  image.rs  mod.rs  rasterize.rs  viuer.rs
src/interpreter/: ascii.rs  context.rs  image.rs  mod.rs  rasterize.rs  viuer.rs
src/interpreter/register_machine/: domain_function.rs  evaluable.rs  evaluate.rs  evaluate_function.rs  lift_combine.rs  lift_domains.rs  lift_evaluable.rs  lift_evaluate.rs  lift_evaluate_function.rs  lift_evaluates.rs  lift_modifier.rs  mod.rs  (+2 more)
src/shape/: mod.rs
src/symbol/: get.rs  mod.rs  set.rs
(+119 files in other folders)
