[package]
name = "elysian"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["dep:image", "dep:viuer"]

[dependencies]
type-fields = { git = "https://github.com/bevy-rust-gpu/type-fields" }

image = { version = "0.24.6", optional = true }
viuer = { version = "0.6.2", optional = true }
